--- a/base/.classpath
+++ b/base/.classpath
@@ -98,5 +98,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/tools/lib/zatca-einvoicing-sdk-238-R3.3.6.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
