Upgraded Java to JDK11 (using Oracle JDK)

--- a/AdempiereEnv.properties
+++ b/AdempiereEnv.properties
@@ -1,6 +1,7 @@
 #AdempiereEnv.properties
 #Fri Sep 27 18:30:10 AST 2024
-JAVA_HOME=/usr/lib/jvm/jdk-1.8-oracle-x64
+JAVA_HOME=/usr/lib/jvm/java-11-openjdk-11.0.25.0.9-2.0.1.el9.x86_64
+#JAVA_HOME=/usr/lib/jvm/jdk-1.8-oracle-x64
 ADEMPIERE_DB_USER=adempiere
 ADEMPIERE_DB_NAME=orclpdb1
 ADEMPIERE_APPS_SERVER=0.0.0.0
